[gd_scene load_steps=23 format=2]

[ext_resource path="res://objects/HitBox2D/HitBoxArea2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Shoots/shot2_strip12.png" type="Texture" id=2]
[ext_resource path="res://objects/projectiles/bullets/Bullet.gd" type="Script" id=3]
[ext_resource path="res://objects/LineTrail/Trail2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Particles/Sakura/BulletTrailParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/Particles/Sakura/BulletExplosionParticle.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 130, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 195, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 260, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 325, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 390, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 455, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 520, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 585, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 650, 0, 65, 65 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 715, 0, 65, 65 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=16]
radius = 500.0

[node name="Bullet" type="KinematicBody2D"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
light_mask = 0
position = Vector2( -1, 3.5636 )
scale = Vector2( 1.3, 1.3 )
collision_layer = 64
collision_mask = 2
script = ExtResource( 3 )
speed = 30
explosion_particle_scene = ExtResource( 6 )
trail_particle_scene = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.486333, 0.486333 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.4, 0.937255, 1, 1 )
light_mask = 128
scale = Vector2( 1.63, 1.63 )
frames = SubResource( 14 )
frame = 9
playing = true

[node name="HitBoxArea2D" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
scale = Vector2( 0.516603, 0.516603 )
shape = SubResource( 15 )

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyDetector"]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 16 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
modulate = Color( 0, 0.156863, 1, 1 )
cast_to = Vector2( 0, 500 )
collision_mask = 6

[node name="Trail2D" parent="." instance=ExtResource( 4 )]
light_mask = 0
default_color = Color( 1, 1, 1, 1 )
lenght = 0

[node name="ExplosionParticle" parent="." instance=ExtResource( 6 )]
modulate = Color( 1.51765, 1.51765, 1.51765, 1 )
position = Vector2( -2, 0 )

[connection signal="max_hited" from="HitBoxArea2D" to="." method="_on_HitBoxArea2D_max_hited"]
[connection signal="not_last_hit" from="HitBoxArea2D" to="." method="_on_HitBoxArea2D_not_last_hit"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
